# plataforma.pyt

./: .claudeignore  .dockerignore  .env  .eslintrc.js  .gitignore  .huskyrc  .prettierignore  .prettierrc  ACTION_PLAN_MODULARIZATION.md  APPLY_SCHEMA_INSTRUCTIONS.md  ARCHITECTURE_REALITY.md  CLAUDE.md  Dockerfile  MODULAR_STRUCTURE_REALITY.md  MODULE_DEVELOPMENT_GUIDE.md  MODULE_FEDERATION_IMPLEMENTATION.md  README.md  RESUMO_INTEGRACAO_SUPABASE.md  SECURITY_GOVERNANCE_PLAN.md  SUPABASE_COMPLETE_SETUP.md  SUPABASE_INTEGRATION_STATUS.md  SUPABASE_SETUP.md  TECH_STACK_TRUTH.md  WHAT_ACTUALLY_WORKS.md  app-status-test.html  browser-diagnostic.html  builder.config.json  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  generate_hashes.py  index.html  jest.config.cjs  jest.coverage.config.js  jest.coverage.setup.js  jest.global-setup.js  jest.global-teardown.js  jest.setup.js  lighthouserc.json  lint-staged.config.js  (+14 more)
.claude/: settings.local.json
base de dados backup/: .gitignore  README.md  package.json  tsconfig.json
client/: .env  App.tsx  AppMinimal.tsx  AppTest.tsx  global.css  main.tsx
database/: cleanup-all.sql  create-vendas-module.sql  dados-exemplo.sql  exemplo-vendas.sql  migrate.cjs  rbac-enterprise-schema.sql
debug/: debug-simple.html  index.html  network-monitor.html  quick-test.html  raw-data-test.html  test-modules.html
docker/: Dockerfile  nginx.conf
docs/: ANALISE-PROJETO.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DISTRIBUTED-INFRASTRUCTURE-PLAN.md  GETTING_STARTED.md  INFRASTRUCTURE-COST-ANALYSIS.md  MIGRATION.md  MODULE_DEVELOPMENT.md  README.md  SECURITY.md  TECHNICAL-SPECIFICATIONS.md
e2e/: auth.spec.ts  capture-login-error.spec.ts  global-setup.ts  global-teardown.ts  smoke-production.spec.ts  smoke.spec.ts  test-admin-debug.spec.ts  test-login-debug.spec.ts  test-login-simple.spec.ts  window-system.spec.ts
module-template/: README.md  module.json  package.json
modules/: MODULE_EXTRACTION_SUMMARY.md  registry.json  registry.ts
monitoring/: alert_rules.yml  filebeat.yml  prometheus.yml  recording_rules.yml
public/: debug-react-mount.html  debug-system.html  final-test.html  full-diagnostic.html  manifest.json  (+6 more)
python-backend/: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_SYSTEM_DOCS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  EMAIL_SYSTEM_README.md  MODULAR_ARCHITECTURE_SUMMARY.md  Makefile  README.md  README_FASTAPI.md  WEBSOCKET_GUIDE.md  alembic.ini  apply_schema.py  create_schema_api.py  create_tables_direct.py  create_vendas_complete.py  docker-compose.prod.yml  docker-compose.yml  migrations.py  module_installer.py  module_registry.py  pyproject.toml  pytest.ini  requirements.txt  run_dev.py  schema_architecture.md  schema_manager.py  setup_database.py  simple_test.py  test_auth.py  test_auth_service.py  test_auth_simple.py  test_crud.py  test_database.py  test_setup.py  test_supabase.py
python-backend/app/: __init__.py  main.py  main_complete.py  main_full.py  main_simple.py
python-backend/app/api/: __init__.py
python-backend/app/api/v1/: __init__.py  auth.py  users.py  websocket.py
python-backend/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  security.py
python-backend/app/models/: __init__.py  admin.py  base.py  core.py  dashboards.py  files.py  modules.py  storage.py  users.py  windows.py
python-backend/app/schemas/: __init__.py  admin.py  auth.py  dashboard.py  files.py  modules.py  users.py  websocket.py  windows.py
python-backend/app/services/: __init__.py  auth.py  auth_service.py  cache_service.py  database_service.py  email_service.py  notification_service.py  storage_service.py  supabase_service.py  websocket_service.py
python-backend/app/tasks/: __init__.py
python-backend/app/utils/: __init__.py  security.py
python-backend/app/websocket/: __init__.py  auth.py  handlers.py  manager.py
python-backend/deploy/: backup.sh  deploy-config.env  deploy.sh  restore.sh
python-backend/docker/nginx/: nginx.conf
python-backend/k8s/: configmap.yaml  fastapi.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
python-backend/modules/: registry.json
python-backend/modules/vendas/: README.md
python-backend/monitoring/: alert-rules.yml  prometheus.yml
python-backend/monitoring/grafana/dashboards/: fastapi-dashboard.json
python-backend/monitoring/grafana/provisioning/dashboards/: dashboards.yml
python-backend/monitoring/grafana/provisioning/datasources/: prometheus.yml
python-backend/tests/: README.md  __init__.py  conftest.py  run_tests.py
python-backend/tests/api/: __init__.py  test_auth_endpoints.py
python-backend/tests/integration/: __init__.py  test_database_operations.py
python-backend/tests/performance/: __init__.py  test_load_testing.py
python-backend/tests/unit/: __init__.py  test_core_config.py  test_core_security.py  test_models_users.py
python-backend/tests/utils/: __init__.py  test_helpers.py
(+359 files in other folders)
